--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".SignupActivity"
+            android:exported="true">
+
+        </activity>
+
         <activity
             android:name=".LoginActivity"
             android:exported="true">
@@ -39,6 +44,8 @@
 <!--                <category android:name="android.intent.category.LAUNCHER"/>-->
 <!--            </intent-filter>-->
         </activity>
+
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
