Auto hide notification on Complete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,12 @@
         <receiver
             android:name=".SnoozeReceiver"
             android:exported="true" />
+
+        <receiver
+            android:name=".CompleteReceiver"
+            android:exported="true" />
+
+
     </application>
 
 </manifest>
